增加一些开发调试工具类。方便分析复杂过程。